# GEN_AI_RAG

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.steering/20260223-initial-implementation/: design.md  requirements.md  tasklist.md
.steering/20260224-fix-performance/: design.md  requirements.md  tasklist.md
.steering/20260224-switch-to-ginza/: design.md  requirements.md  tasklist.md
.steering/20260225-fix-search-quality/: design.md  requirements.md  tasklist.md
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
notebook/: 01_connect_oss_llm.ipynb  02_chat_langgraph_langchain.ipynb  03_01_AI_Agent_ReAct.ipynb  03_02_AI_Agent_Workflow.ipynb  04_AI_Embedding_RAG.ipynb  05_AI_Agent_Workflow_RAG.ipynb  06_Gradio_UI_on_Colab.ipynb  07_AI_Agent_Workflow_RAG_on_UI.ipynb  08_Agentic_RAG_Main.ipynb
notebook/outputs/: 07_chat_log.md  07_reasoning_log.md
notebook_transformers/: 01_connect_oss_llm_transformers.ipynb  02_chat_langgraph_langchain_transformers.ipynb  03_01_AI_Agent_ReAct_transformers.ipynb  README.md
prompts_SDD/: promot_architecture.md  promot_development-guidelines.md  promot_functional-design.md  promot_glossary.md  promot_product-requirements.md  promot_repository-structure.md
src/domain/: config.py  models.py
src/infrastructure/: di_container.py
src/usecases/: agent_workflow.py  data_ingestion.py
tests/: conftest.py
tests/integration/: test_agent_workflow.py
tests/unit/: test_data_ingestion.py  test_data_preprocessing.py  test_doc_search_node.py  (+4 more)
(+14 files in other folders)
