[project]
name = "gen-ai-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.1",
    "gradio>=6.6.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.9",
    "markitdown>=0.1.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.3",
    "spacy>=3.8.11",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
